# tinysimengine

./: CMakeLists.txt  README.md
src/: main.cpp
src/engine/: Component.hpp  Entity.cpp  Entity.hpp  World.cpp  World.hpp
src/game/: Game.cpp  Game.hpp
